--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -1,15 +1,19 @@
 <html>
     <head>
         <title>그랩마켓</title>
+        <!-- 외부 css 파일 불러오기 -->
         <link href="index.css" type="text/css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </head>
     <body>
+        <!-- 헤더 -->
         <div id="header">
             <div id="header-area">
+                <!-- 상대경로로 써준다 -->
                 <img src="images/icons/logo.png" />
             </div>
         </div>
+        <!-- 바디 -->
         <div id="body">
             <div id="banner">
                 <img src="images/banners/banner1.png" />
@@ -17,6 +21,7 @@
             <h1>판매되는 상품들</h1>
             <div id="product-list"></div>
         </div>
+        <!-- 푸터 -->
         <div id="footer"></div>
     </body>
     <script>
