이미지 height 맞추기

--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -25,6 +25,7 @@
         <div id="footer"></div>
     </body>
     <script>
+        axios.get("")
         var products = [
             {
                 name: "농구공",
